index page 70% finished

--- a/public/index.html
+++ b/public/index.html
@@ -376,7 +376,7 @@
       </section>
 
       <!-- interyer nomer -->
-      <section class="interyer-nomer lg:pt-[110px] pt-[50px] md:pb-[120px] pb-[50px]">
+      <section class="interyer-nomer md:pb-[120px] pb-[50px]">
         <div class="container">
           <div class="flex justify-between items-end">
             <h1 class="title-lg flex items-center gap-[46px]">
@@ -438,6 +438,91 @@
         </div>
       </section>
 
+      <!-- Complex numbers -->
+      <section class="container pb-[120px]">
+        <h1 class="title-lg flex items-center gap-[46px]">
+          <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <span>Номера комплекса</span>
+        </h1>
+
+        <div class="flex gap-5 mt-[57px]">
+          <button
+            class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            номер-студия
+          </button>
+          <button
+            class="flex items-center uppercase justify-center h-[34px] border border-white px-5 rounded-[50px] text-white text-sm font-normal">
+            1-к номер
+          </button>
+          <button
+            class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            2-к номер
+          </button>
+          <button
+            class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            3-к номер
+          </button>
+        </div>
+
+        <div class="flex items-start gap-[50px] mt-[43px]">
+          <div>
+            <h4 class="font-medium text-2xl leading-6 text-light-brown mb-[43px] uppercase">Планировки</h4>
+            <div class="grid grid-cols-2 gap-[72px]">
+              <div>
+                <div class="bg-white py-[22px] px-[10px] h-[150px] w-[221px]">
+                  <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+                </div>
+                <div class="flex justify-between items-center mt-2">
+                  <span class="text-light-white text-[13px] leading-6">40.5 м2</span>
+                  <span class="text-white text-[13px] leading-6">от 4.366 млн</span>
+                </div>
+              </div>
+              <div>
+                <div class="bg-white py-[22px] px-[10px] h-[150px] w-[221px]">
+                  <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+                </div>
+                <div class="flex justify-between items-center mt-2">
+                  <span class="text-light-white text-[13px] leading-6">40.5 м2</span>
+                  <span class="text-white text-[13px] leading-6">от 4.366 млн</span>
+                </div>
+              </div>
+              <div>
+                <div class="bg-white py-[22px] px-[10px] h-[150px] w-[221px]">
+                  <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+                </div>
+                <div class="flex justify-between items-center mt-2">
+                  <span class="text-light-white text-[13px] leading-6">40.5 м2</span>
+                  <span class="text-white text-[13px] leading-6">от 4.366 млн</span>
+                </div>
+              </div>
+              <div>
+                <div class="bg-white py-[22px] px-[10px] h-[150px] w-[221px]">
+                  <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+                </div>
+                <div class="flex justify-between items-center mt-2">
+                  <span class="text-light-white text-[13px] leading-6">40.5 м2</span>
+                  <span class="text-white text-[13px] leading-6">от 4.366 млн</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="flex items-start justify-between">
+              <h4 class="font-medium text-2xl leading-6 text-light-brown uppercase">1-к номер</h4>
+              <div class="space-y-[2px]">
+                <span class="block font-light font-Muller leading-6 text-2xl text-light-brown">от 4.805 млн</span>
+                <span class="block text-light-white text-base leading-6 font-light font-Muller">чистая прибыль 780.000 /
+                  год *</span>
+              </div>
+            </div>
+            <div class="bg-[#cbccd0] h-[375px] w-[616px] mt-3">
+              <img class="object-contain" src="./assets/images/proect-1.png" alt="prodject img">
+            </div>
+          </div>
+        </div>
+
+      </section>
+
       <!-- payment-methods -->
       <section class="payment-methods">
         <div class="container">
@@ -452,7 +537,8 @@
                 <img src="./assets/images/icons/procent.svg" alt="procent icon" />
               </div>
               <div>
-                <h3 class="font-ReformaGroteskMediumC text-[32px] leading-[33px] font-medium text-light-brown pb-3 uppercase">
+                <h3
+                  class="font-ReformaGroteskMediumC text-[32px] leading-[33px] font-medium text-light-brown pb-3 uppercase">
                   Ипотека
                 </h3>
                 <p class="leading-[18px] text-[13px] font-light max-w-[351px] text-light-white">
@@ -467,7 +553,8 @@
                 <img src="./assets/images/icons/free-icon-money.svg" alt="free-icon-money" />
               </div>
               <div>
-                <h3 class="font-ReformaGroteskMediumC text-[32px] leading-[33px] font-medium text-light-brown pb-3 uppercase">
+                <h3
+                  class="font-ReformaGroteskMediumC text-[32px] leading-[33px] font-medium text-light-brown pb-3 uppercase">
                   рассрочка
                 </h3>
                 <p class="leading-[18px] text-[13px] font-light max-w-[351px] text-light-white">
@@ -534,11 +621,161 @@
         </div>
       </section>
 
-      <!--  -->
-      <section class="">
-        <div class="container">
+      <!-- stock -->
+      <section class="container md:my-[120px] my-[50px]">
+        <h1 class="title-lg flex items-center gap-[46px]">
+          <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <span>акции</span>
+        </h1>
 
+        <div class="divide-y divide-solid divide-light-brown border-y border-light-brown mt-[45px]">
+          <div class=" py-7 flex items-stretch justify-between">
+            <div class="font-Muller flex flex-col justify-between pt-[17px] pb-[7px]">
+              <div class="max-w-[522px]">
+                <h3 class="text-[28px] leading-[60px] font-medium text-light-brown uppercase">Квартиры с готовым
+                  ремонтом
+                </h3>
+                <p class="text-base leading-6 font-light text-light-white">
+                  Забудьте о хлопотах с ремонтом - мы уже все подготовили для вашего комфортного заселения в новую
+                  квартиру.
+                </p>
+              </div>
+              <div class="flex gap-[15px] text-light-brown items-center">
+                <span class="font-medium leading-6 text-base">до 30.06.2024</span>
+                <div class="w-[9px] h-[9px] rounded-full bg-light-brown"></div>
+                <span class="font-medium leading-6 text-base">акция</span>
+              </div>
+            </div>
+            <img src="./assets/images/stock-img-1.png" alt="stock img">
+          </div>
+
+          <div class=" py-7 flex items-stretch justify-between">
+            <div class="font-Muller flex flex-col justify-between pt-[17px] pb-[7px]">
+              <div class="max-w-[522px]">
+                <h3 class="text-[28px] leading-[60px] font-medium text-light-brown uppercase">Квартиры с готовым
+                  ремонтом
+                </h3>
+                <p class="text-base leading-6 font-light text-light-white">
+                  Забудьте о хлопотах с ремонтом - мы уже все подготовили для вашего комфортного заселения в новую
+                  квартиру.
+                </p>
+              </div>
+              <div class="flex gap-[15px] text-light-brown items-center">
+                <span class="font-medium leading-6 text-base">до 30.06.2024</span>
+                <div class="w-[9px] h-[9px] rounded-full bg-light-brown"></div>
+                <span class="font-medium leading-6 text-base">акция</span>
+              </div>
+            </div>
+            <img src="./assets/images/stock-img-2.png" alt="stock img">
+          </div>
+
+          <div class=" py-7 flex items-stretch justify-between">
+            <div class="font-Muller flex flex-col justify-between pt-[17px] pb-[7px]">
+              <div class="max-w-[522px]">
+                <h3 class="text-[28px] leading-[60px] font-medium text-light-brown uppercase">Квартиры с готовым
+                  ремонтом
+                </h3>
+                <p class="text-base leading-6 font-light text-light-white">
+                  Забудьте о хлопотах с ремонтом - мы уже все подготовили для вашего комфортного заселения в новую
+                  квартиру.
+                </p>
+              </div>
+              <div class="flex gap-[15px] text-light-brown items-center">
+                <span class="font-medium leading-6 text-base">до 30.06.2024</span>
+                <div class="w-[9px] h-[9px] rounded-full bg-light-brown"></div>
+                <span class="font-medium leading-6 text-base">акция</span>
+              </div>
+            </div>
+            <img src="./assets/images/stock-img-1.png" alt="stock img">
+          </div>
         </div>
+      </section>
+
+      <section class="document">
+        <div class="container">
+          <h1 class="title-lg flex items-center gap-[46px]">
+            <img src="./assets/images/icons/title-line.svg" alt="line icon" />
+            <span>документы</span>
+          </h1>
+
+          <div class="divide-y divide-solid divide-light-brown border-y border-light-brown mt-[45px]">
+            <div class="flex items-center justify-between font-Muller text-white py-5">
+              <span class="font-light text-lg leading-6">РНС 2023</span>
+              <button
+                class="flex items-center gap-[14px] bg-light-brown capitalize justify-center h-[34px] border border-light-brown px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                <span>Cкачать документ</span>
+                <img src="./assets/images/icons/download.svg" alt="download">
+              </button>
+            </div>
+            <div class="flex items-center justify-between font-Muller text-white py-5">
+              <span class="font-light text-lg leading-6">Проектная декларация Межсанаторный 03-04-2023 Парковка</span>
+              <button
+                class="flex items-center gap-[14px] bg-light-brown capitalize justify-center h-[34px] border border-light-brown px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                <span>Cкачать документ</span>
+                <img src="./assets/images/icons/download.svg" alt="download">
+              </button>
+            </div>
+            <div class="flex items-center justify-between font-Muller text-white py-5">
+              <span class="font-light text-lg leading-6">Проектная декларация Межсанаторный 10 04 2023 МКЖД</span>
+              <button
+                class="flex items-center gap-[14px] bg-light-brown capitalize justify-center h-[34px] border border-light-brown px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                <span>Cкачать документ</span>
+                <img src="./assets/images/icons/download.svg" alt="download">
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- developer -->
+      <section class="container mt-[120px]">
+        <h1 class="title-lg flex items-center gap-[46px]">
+          <img src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <span>застройщик “сск”</span>
+        </h1>
+        <div class="flex items-start gap-6 justify-between mt-[27px] pl-[98px]">
+          <div class="max-w-[485px] w-full">
+            <p class="text-xl	font-normal leading-6 font-Muller text-white">
+              Давно выяснено, что при оценке дизайна
+              и композиции читаемый текст мешает сосредоточиться
+            </p>
+            <div class="mt-9 flex divide-x divide-light-brown">
+              <div class="space-y-[5px] pr-[63px]">
+                <span
+                  class="text-[40px] leading-[41.28px] font-medium font-ReformaGroteskMediumC text-light-brown">1999</span>
+                <p class="text-[#FFFFFF99] text-sm leading-[18px] font-light">
+                  Год основания <br> компании
+                </p>
+              </div>
+              <div class="space-y-[5px] pl-[63px]">
+                <span class="text-[40px] leading-[41.28px] font-medium font-ReformaGroteskMediumC text-light-brown">11
+                  домов</span>
+                <p class="text-[#FFFFFF99] text-sm leading-[18px] font-light">
+                  Сдано в одном жилом <br> комплексе
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="max-w-[600px] w-full text-light-white space-y-[22px]">
+            <p class="text-base leading-[22px] tracking-wide font-Muller font-light">
+              Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum
+              используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное
+              распределение букв и пробелов
+            </p>
+            <p class="text-base leading-[22px] tracking-wide font-Muller font-light">
+              Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum
+              используют потому, что тот обеспечивает
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="relative bg-[url('../assets/images/video-bg.png')] h-[652px] md:mt-[91px] mt-[30px] flex items-center justify-center">
+          <button>
+            <img src="./assets/images/icons/play.svg" alt="play icon">
+          </button>
+        </div>
+
       </section>
 
     </main>
