--- a/public/index.html
+++ b/public/index.html
@@ -103,11 +103,27 @@
         </div>
       </section>
 
+      <section class="container mb-[120px]">
+        <h1 class="title-lg flex items-center gap-[46px]">
+          <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <span>Локация комплекса</span>
+        </h1>
+        <div class="font-Muller flex justify-between">
+          <p class="text-white max-w-[526px] leading-6 font-light text-lg tracking-wide">
+            Сложно придумать более идеальную локацию для гостиничного комплекса: у резидентов «Корсакова» будет соблюдён
+            баланс всех сфер жизни как на территории отеля, так и за его пределами.
+          </p>
+          <p class="text-[#FFFFFF66] max-w-[526px] leading-[22px] font-normal tracking-wide">
+            Здесь в ближайшем доступе не только морской берег, но и разнообразная инфраструктура. Шаговая доступность магазинов, центров общественного досуга и питания, а также социальных объектов, сделает ваш отдых ещё более комфортным.
+          </p>
+        </div>
+      </section>
+
       <!-- complex -->
       <section class="complex">
         <div class="container">
           <h1 class="title-lg flex items-center gap-[46px]">
-            <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+            <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
             <span>Преимущества</span>
           </h1>
 
@@ -170,11 +186,12 @@
         </div>
       </section>
 
+
       <!--  -->
-      <section class="container mt-[120px]">
+      <section class="mt-[120px]">
         <div class="container">
           <h1 class="title-lg flex items-center gap-[46px]">
-            <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+            <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
             <span>Окупаемость 7 лет</span>
           </h1>
 
@@ -228,8 +245,67 @@
             </div>
           </div>
         </div>
-        <div class="mt-[60px]">
-
+        <div class="mt-[60px] bg-light-brown pt-7 pb-[57px]">
+          <div class="container flex">
+            <div class="divide-y divide-[#313245B2] space-y-[20px] w-full">
+              <div class="flex gap-[40px] justify-between">
+                <div class="font-Muller space-y-[20px] w-[100px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Площадь <br> номера</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[100px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Окупаемость <br> с 3кв. ‘24</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[161px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Окупаемость с момента ввода в эксплуатацию
+                    (4кв. ‘26)</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[141px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Цена 1 м2</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[141px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Стоимость номера</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[141px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Прогнозируемая цена 1м2 (на 4кв.
+                    ‘26)</span>
+                </div>
+                <div class="font-Muller space-y-[20px] w-[141px]">
+                  <span class="block leading-[14px] text-sm text-[#313245B2]">Прогнозируемая стоимость номера (на 4кв.
+                    ‘26)</span>
+                </div>
+              </div>
+              <div class="flex gap-[40px] justify-between">
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[100px]">
+                  <span class="block">30.26</span>
+                  <span class="block">61.36</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[100px]">
+                  <span class="block">30.26</span>
+                  <span class="block">61.36</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[161px]">
+                  <span class="block">4.5 года</span>
+                  <span class="block">4 года</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[141px]">
+                  <span class="block">350.000 руб.</span>
+                  <span class="block">350.000 руб.</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[141px]">
+                  <span class="block">10.591.000 руб.</span>
+                  <span class="block">18.714.800 руб.</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[141px]">
+                  <span class="block">462.875 руб.</span>
+                  <span class="block">462.875 руб.</span>
+                </div>
+                <div class="space-y-3 text-graphite-gray text-lg leading-[18px] pt-[26px] w-[141px]">
+                  <span class="block">14.006.598 руб.</span>
+                  <span class="block">14.006.598 руб.</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -237,7 +313,7 @@
       <section class="md:mt-[130px] md:mb-[120px] my-[50px]">
         <div class="container">
           <h1 class="title-lg flex items-center gap-[46px]">
-            <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+            <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
             <span>Преимущества</span>
           </h1>
         </div>
@@ -443,7 +519,7 @@
         <div class="container">
           <div class="flex justify-between items-end">
             <h1 class="title-lg flex items-center gap-[46px]">
-              <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+              <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
               <span>интерьеры</span>
             </h1>
             <div class="flex gap-5">
@@ -504,7 +580,7 @@
       <!-- Complex numbers -->
       <section class="container pb-[120px]">
         <h1 class="title-lg flex items-center gap-[46px]">
-          <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
           <span>Номера комплекса</span>
         </h1>
 
@@ -615,7 +691,7 @@
       <section class="payment-methods">
         <div class="container">
           <h1 class="title-lg flex items-center gap-[46px]">
-            <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+            <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
             <span>способы оплаты</span>
           </h1>
           <div class="lg-plus:flex items-stretch justify-between md:mt-12 mt-[30px] border-t border-[#ECCCB373]">
@@ -712,7 +788,7 @@
       <!-- stock -->
       <section class="container md:my-[120px] my-[50px]">
         <h1 class="title-lg flex items-center gap-[46px]">
-          <img class="-ml-[98px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
+          <img class="-ml-[53px]" src="./assets/images/icons/title-line.svg" alt="line icon" />
           <span>акции</span>
         </h1>
 
