--- a/public/number.html
+++ b/public/number.html
@@ -19,49 +19,50 @@
   <div class="overflow-hidden">
 
     <!-- header -->
-    <header class="relative">
+    <header>
       <div
-        class="header-menu absolute top-0 left-0 w-[375px] bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        class="header-menu absolute top-0 left-0 w-[375px] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
         <button class="close-menu__btn mb-[150px]">
-          <img src="./assets/images/icons/close-icon.svg" alt="close icon">
+          <img src="./assets/images/icons/close-icon.svg" alt="close icon" />
         </button>
         <ul class="space-y-4 pb-[197px]">
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] " href="#!">О
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
+              href="#!">О
               комплексе</a>
           </li>
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
               href="#!">Генплан</a>
           </li>
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
               href="#!">Номера</a>
           </li>
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
               href="#!">Ипотека</a>
           </li>
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
               href="#!">Акции</a>
           </li>
           <li>
-            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGrotesk text-[40px] "
+            <a class="font-medium leading-[41.28px] text-graphite-gray font-ReformaGroteskMediumC text-[40px]"
               href="#!">Документы</a>
           </li>
         </ul>
         <a class="gray-btn__lg" href="#!">Заказать звонок</a>
       </div>
-      <div class="flex items-center justify-between pt-7 text-sm	xl:max-w-[1388px] mx-auto xl:px-0 px-5">
-        <button class="open-menu__btn flex items-center  md:gap-2.5 md:w-[175px]">
-          <img src="./assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
+      <div class="flex items-center justify-between text-sm xl:max-w-[1388px] mx-auto xl:px-0 px-5">
+        <button class="open-menu__btn flex items-center md:gap-2.5 md:w-[175px]">
+          <img src="./assets/images/icons/hamburger-menu.svg" alt="hamburger-menu" />
           <span class="font-light text-white md:block hidden">меню</span>
         </button>
         <a class="md:block hidden" href="#!">
-          <img src="./assets/images/logo/company-logo.png" alt="company-logo" width="290" height="70">
+          <img src="./assets/images/logo/company-logo.png" alt="company-logo" width="290" height="70" />
         </a>
-        <a class="md:text-white text-light-brown md:text-sm  text-xs font-semibold leading-6.5 tracking-wide"
+        <a class="md:text-white text-light-brown md:text-sm text-xs font-semibold leading-6.5 tracking-wide"
           href="tel:+70000000000">+7 (000) 000-00-00</a>
       </div>
     </header>
@@ -205,28 +206,28 @@
           <div class="swiper-container interyer-nomer__swiper lg:mt-14 mt-5">
             <div class="swiper-wrapper">
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-1.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-1.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-2.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-2.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-3.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-1.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-1.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-2.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-2.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
-                  alt="product img">
+                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                  src="assets/images/slide-img-3.png" alt="product img">
               </div>
             </div>
           </div>
@@ -592,7 +593,7 @@
 
           <div class="md:mt-[51px] mt-[26px] flex flex-col gap-10">
             <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
-              <img src="./assets/images/product-img-1.png" alt="product img">
+              <img class="object-cover" src="./assets/images/product-img-1.png" alt="product img">
               <div class="max-w-[515px] flex flex-col lg-plus:gap-6">
                 <div
                   class="md:text-[54px] text-[32px] md:leading-[55.73px] leading-[33.02px] lg-plus:pb-0 pb-2 text-light-brown font-medium font-ReformaGroteskMediumC uppercase">
@@ -625,10 +626,10 @@
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
               </div>
-              <img src="./assets/images/product-img-2.png" alt="product img">
+              <img class="object-cover" src="./assets/images/product-img-2.png" alt="product img">
             </div>
             <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
-              <img src="./assets/images/product-img-3.png" alt="product img">
+              <img class="object-cover" src="./assets/images/product-img-3.png" alt="product img">
               <div class="max-w-[515px] flex flex-col lg-plus:gap-6">
                 <div
                   class="md:text-[54px] text-[32px] md:leading-[55.73px] leading-[33.02px] lg-plus:pb-0 pb-2 text-light-brown font-medium font-ReformaGroteskMediumC uppercase">
